--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
-python-pyhsm (1.0.2b-2) UNRELEASED; urgency=low
+python-pyhsm (1.0.2b-2) unstable; urgency=low
 
-  * NOT RELEASED YET
+  * Hopefully fix watch file.
 
  -- Simon Josefsson <simon@josefsson.org>  Wed, 14 Sep 2011 10:56:41 +0200
 
