--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-pyhsm (1.0.2b-3) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Simon Josefsson <simon@josefsson.org>  Wed, 14 Sep 2011 11:05:23 +0200
+
 python-pyhsm (1.0.2b-2) unstable; urgency=low
 
   * Hopefully fix watch file.
