--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
-python-pyhsm (1.0.2c-2) UNRELEASED; urgency=low
+python-pyhsm (1.0.3-2~ppa1~ppadisttarget1) UNRELEASED; urgency=low
 
   * NOT RELEASED YET
 
- -- Fredrik Thulin <fredrik@yubico.com>  Wed, 21 Sep 2011 14:16:03 +0200
+ -- Fredrik Thulin <fredrik@yubico.com>  Tue, 15 Nov 2011 12:13:55 +0100
+
+python-pyhsm (1.0.3-1~ppa1~ppadisttarget1) ppadisttarget; urgency=low
+
+  * New upstream release. Better yhsm-validation-server.
+
+ -- Fredrik Thulin <fredrik@yubico.com>  Tue, 08 Nov 2011 23:25:43 +0100
 
 python-pyhsm (1.0.2c-1~ppa1~ppadisttarget1) ppadisttarget; urgency=low
 
