--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-python-pyhsm (1.0.3a-1) unstable; urgency=low
+python-pyhsm (1.0.3b-1) unstable; urgency=low
 
   * Initial release.
 
- -- Fredrik Thulin <fredrik@yubico.com>  Thu, 22 Dec 2011 18:00:06 +0100
+ -- Fredrik Thulin <fredrik@yubico.com>  Mon, 02 Jan 2012 15:13:44 +0100
