--- a/utils/yhsm-keystore-unlock.1
+++ b/utils/yhsm-keystore-unlock.1
@@ -49,6 +49,11 @@ enable debug printout, including all data sent to/from YubiHSM.
 \fB\-\-no-otp\fR
 skip the prompt for an OTP. For use by scripts where no OTP
 is required and the Master Key is stored on the server with the YubiHSM.
+.TP
+\fB\-\-stdin\fR
+read password and/or OTP from stdin rather than prompting for them.
+Python prompts does not accept piped input, so this option have to be
+used to unlock the YubiHSM from a script for example.
 
 .SH "EXIT STATUS"
 .IX Header "EXIT STATUS"
