--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,18 @@
+python-pyhsm (1.0.4-1) unstable; urgency=low
+
+  * New upstream release matching firmware 1.0.4.
+    - Firmware adds flag YSM_USER_NONCE to address security problem
+      for some usages where AEADs could be decrypted by an attacker
+      capable of generating new AEADs.
+  * New file format for stored AEADs (code loading AEADs is backwards
+    compatible), including key handle and nonce.
+  * AES CCM implementation compatible with YubiHSM in software, for
+    transparency and to enable willfull decryption of AEADs.
+  * Tools to generate YubiKey secrets into AEADs as well as decrypt
+    them to enable provisioning YubiKeys with the secrets.
+
+ -- Fredrik Thulin <fredrik@yubico.com>  Thu, 21 Jun 2012 21:52:53 +0200
+
 python-pyhsm (1.0.3c-2) unstable; urgency=low
 
   [ Fredrik Thulin ]
