--- a/utils/yhsm-keystore-unlock.1
+++ b/utils/yhsm-keystore-unlock.1
@@ -70,7 +70,7 @@ Report python-pyhsm/yhsm-keystore-unlock bugs in
 
 .SH "SEE ALSO"
 The
-.URL "https://github.com/Yubico/python-pyhsm/" "python-yubico home page"
+.URL "https://github.com/Yubico/python-pyhsm/" "python-pyhsm home page"
 .PP
 YubiHSMs can be obtained from
 .URL "http://www.yubico.com/" "Yubico" "."
