--- a/utils/yhsm-linux-add-entropy.1
+++ b/utils/yhsm-linux-add-entropy.1
@@ -63,7 +63,7 @@ Report python-pyhsm/yhsm-linux-add-entropy bugs in
 
 .SH "SEE ALSO"
 The
-.URL "https://github.com/Yubico/python-pyhsm/" "python-yubico home page"
+.URL "https://github.com/Yubico/python-pyhsm/" "python-pyhsm home page"
 .PP
 YubiHSMs can be obtained from
 .URL "http://www.yubico.com/" "Yubico" "."
