--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,11 @@
 python-pyhsm (1.0.4a-1) unstable; urgency=low
 
+  [ Fredrik Thulin ]
   * New upstream release.
     - Enable IPv6 --addr for network servers.
     - Verifies communication with YubiHSM on initialization.
 
- -- Fredrik Thulin <fredrik@yubico.com>  Tue, 26 Jun 2012 16:32:05 +0200
+ -- Simon Josefsson <simon@josefsson.org>  Wed, 22 Aug 2012 12:47:53 +0200
 
 python-pyhsm (1.0.4-1) unstable; urgency=low
 
