--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,18 @@
+python-pyhsm (1.0.4b-1) unstable; urgency=low
+
+  [ Dain Nilsson ]
+  * New upstream release.
+    - yhsm-import-keys: Support soft HSM AEAD generation.
+    - yhsm-import-keys: Ignore lines starting with #.
+    - yhsm-import-keys: Block all-zero (ccc...c) keys.
+    - yhsm-decrypt-keys: Support generating AEADs.
+    - yhsm-decrypt-keys: Ignores non-modhex files in AEAD directory trees.
+    - yhsm-generate-keys: Bugfix that caused AEAD generation to fail.
+    - yhsm-generate-keys: Bugfix that caused wrong nonce to be used.
+    - yhsm-generate-keys: Prevent generating all-zero (ccc...c) keys.
+
+ -- Dain Nilsson <dain@yubico.com>  Mon, 11 Feb 2013 16:55:24 +0100
+
 python-pyhsm (1.0.4a-1) unstable; urgency=low
 
   [ Fredrik Thulin ]
