--- a/utils/yhsm-generate-keys.1
+++ b/utils/yhsm-generate-keys.1
@@ -55,6 +55,9 @@ Key handles to encrypt the generated secrets with. Examples : "1", "0xabcd".
 .TP
 \fB\-\-start\-public\-id id\fR
 Public id of the first generated secret, in modhex.
+.TP
+\fB\-\-random\-nonce\fR
+Use random nonce generated from YubiHSM.
 
 .SH "EXIT STATUS"
 .IX Header "EXIT STATUS"
