--- a/yubikey-ksm/yhsm-import-keys.1
+++ b/yubikey-ksm/yhsm-import-keys.1
@@ -51,6 +51,9 @@ base directory for AEADs (default: /var/cache/yubikey-ksm/aeads)
 .TP
 \fB\-\-internal-db\fR
 add entrys to YubiHSM internal database, rather than creating AEAD files
+.TP
+\fB\-\-random-nonce\fR
+use random nonce generated from YubiHSM
 
 .SH "INPUT FORMAT"
 
