--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,11 @@
 Python-pyhsm NEWS -- History of user-visible changes.          -*- outline -*-
 
+* Version 1.0.4g (released 2013-05-06)
+
+** yhsm-daemon: Support listening to non-loopback interfaces.
+** yhsm-daemon: Forward exceptions to the client.
+** yhsm-daemon: Handle device unavailable, and attempt to recover.
+
 * Version 1.0.4f (released 2013-04-12)
 
 ** Fix failing test.
