--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+python-pyhsm (1.0.4g-1) unstable; urgency=low
+
+  [ Dain Nilsson ]
+  * New upstream release.
+    - yhsm-daemon improvements.
+  * Added init script for yhsm-daemon.
+
+ -- Dain Nilsson <dain@yubico.com>  Mon, 06 May 2013 12:57:52 +0200
+
 python-pyhsm (1.0.4f-1) unstable; urgency=low
 
   [ Dain Nilsson ]
