--- a/utils/yhsm-daemon.1
+++ b/utils/yhsm-daemon.1
@@ -22,6 +22,9 @@ syntax:
 
 hsm = YHSM('yhsm://localhost:5348')
 
+Note that the daemon and clients need to share the same version number to be
+compatible.
+
 .SH OPTIONS
 .PP
 .TP
