--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-python-pyhsm (1.0.4i-1) unstable; urgency=low
+python-pyhsm (1.0.4j-1) unstable; urgency=low
 
   * New upstream release.
   * yhsm-yubikey-ksm: Depend on python-daemon and python-sqlalchemy.
   * Fix URLs.
 
- -- Simon Josefsson <simon@josefsson.org>  Tue, 16 Sep 2014 14:17:56 +0200
+ -- Simon Josefsson <simon@josefsson.org>  Tue, 16 Sep 2014 15:38:56 +0200
 
 python-pyhsm (1.0.4h-1) unstable; urgency=low
 
