--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-pyhsm (1.0.4j-2) unstable; urgency=low
+
+  * yhsm-yubikey-ksm: Ship yhsm-db-import/yhsm-db-export.
+
+ -- Simon Josefsson <simon@josefsson.org>  Thu, 18 Sep 2014 10:45:56 +0200
+
 python-pyhsm (1.0.4j-1) unstable; urgency=low
 
   * New upstream release.
